--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google/genai": "^1.0.1",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.8",
+    "framer-motion": "^12.15.0",
     "gh-pages": "^6.3.0",
     "katex": "^0.16.22",
     "mammoth": "1.8.0",
