--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@google/genai": "^1.0.1",
+    "@react-oauth/google": "^0.12.1",
+    "@supabase/supabase-js": "^2.49.8",
+    "framer-motion": "^11.3.1",
+    "gh-pages": "^6.3.0",
+    "katex": "^0.16.22",
+    "mammoth": "1.8.0",
+    "pdfjs-dist": "4.4.168",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@google/genai": "^1.0.1",
-    "pdfjs-dist": "4.4.168",
-    "react-router-dom": "^7.6.0",
-    "mammoth": "1.8.0",
-    "@react-oauth/google": "^0.12.1",
-    "katex": "^0.16.22",
-    "@supabase/supabase-js": "^2.49.8",
-    "framer-motion": "^11.3.1"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
