--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,10 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
-      
-    - name: Build
+        - name: Build
       run: npm run build
       env:
+        VITE_GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         
     - name: Setup Pages
