--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,14 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
-jobs:
-  # Build job
+jobs:  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-        - name: Setup Node.js
+      
+    - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
@@ -62,11 +62,8 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4    # Deploy to GitHub Pages
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
