--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^1.0.1",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.8",
+    "dotenv": "^16.5.0",
     "framer-motion": "^11.3.1",
     "gh-pages": "^6.3.0",
     "katex": "^0.16.22",
