--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.18.2",
     "gh-pages": "^6.3.0",
     "katex": "^0.16.22",
+    "lucide-react": "^0.511.0",
     "mammoth": "1.8.0",
     "pdfjs-dist": "4.4.168",
     "react": "^19.1.0",
