--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "framer-motion": "^11.18.2",
     "gh-pages": "^6.3.0",
     "katex": "^0.16.22",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
     "mammoth": "1.8.0",
     "pdfjs-dist": "4.4.168",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react-window": "^1.8.8",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
