--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "react-swipeable": "^7.0.2",
     "react-window": "^1.8.11"
   },
   "devDependencies": {
