--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "deploy:github": "echo 'Use GitHub Actions for deployment. Push to main branch to trigger deployment.'"
+    "deploy:github": "echo 'Use GitHub Actions for deployment. Push to main branch to trigger deployment.'",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
     "@google/genai": "^1.0.1",
+    "@headlessui/react": "^2.2.4",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.49.8",
+    "@types/styled-components": "^5.1.34",
     "dotenv": "^16.5.0",
     "framer-motion": "^11.18.2",
     "gh-pages": "^6.3.0",
+    "github-markdown-css": "^5.8.1",
+    "i18next": "^25.2.1",
     "katex": "^0.16.22",
     "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
@@ -25,14 +33,36 @@
     "pdfjs-dist": "4.4.168",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
+    "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
     "react-swipeable": "^7.0.2",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/react-window": "^1.8.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^3.2.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "happy-dom": "^17.6.3",
+    "jsdom": "^26.1.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vitest": "^3.2.2"
   }
 }
