--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -51,14 +49,10 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^3.2.2",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "happy-dom": "^17.6.3",
-    "jsdom": "^26.1.0",
     "typescript": "~5.7.2",
-    "vite": "^6.2.0",
-    "vitest": "^3.2.2"
+    "vite": "^6.2.0"
   }
 }
