chore: update build process and add type-check script
- Removed TypeScript compilation from the build script in package.json and added a separate type-check script.
- Added @types/react-katex to dependencies for improved type definitions.
- Updated tsconfig.json to include custom type definitions and specify type roots.
- Created custom.d.ts to declare modules and fix TypeScript errors related to CSS modules, external libraries, and missing translations.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["src/**/*", "src/custom.d.ts"],
   "compilerOptions": {
     "target": "ES2020",
     "experimentalDecorators": true,
@@ -15,6 +16,7 @@
     "noEmit": true,
     "allowJs": true,
     "jsx": "react-jsx",
+    "typeRoots": ["./node_modules/@types", "./src"],
 
     /* Linting */
     "strict": true,
