--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@google/genai": "^1.0.1",
     "@headlessui/react": "^2.2.4",
     "@react-oauth/google": "^0.12.1",
-    "@supabase/supabase-js": "^2.49.8",
+    "@supabase/supabase-js": "^2.50.3",
     "@types/styled-components": "^5.1.34",
     "dotenv": "^16.5.0",
     "framer-motion": "^11.18.2",
@@ -51,9 +51,12 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
