--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
