--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@headlessui/react": "^2.2.4",
     "@react-oauth/google": "^0.12.1",
     "@supabase/supabase-js": "^2.50.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/styled-components": "^5.1.34",
     "dotenv": "^16.5.0",
     "framer-motion": "^11.18.2",
@@ -40,11 +42,10 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -58,7 +59,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
