--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:analyze": "npm run build && npx vite-bundle-analyzer dist/assets"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@google/genai": "^1.0.1",
     "@headlessui/react": "^2.2.4",
     "@react-oauth/google": "^0.12.1",
