--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:production": "vite build",
     "type-check": "tsc",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "deploy:github": "echo 'GitHub Actions will handle deployment. Push to main branch to trigger deployment.'",
     "clean": "rm -rf dist",
-    "build:analyze": "npm run build && npx vite-bundle-analyzer dist/assets"
+    "build:analyze": "vite build",
+    "serve:prod": "npm run build && vite preview --port 5173"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -58,10 +60,12 @@
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
+    "cssnano": "^6.0.5",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.6",
+    "terser": "^5.31.0",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
